@@ -84,8 +84,8 @@ import org.openflexo.fge.notifications.ObjectResized;
 import org.openflexo.fge.notifications.ObjectWillResize;
 import org.openflexo.toolbox.ConcatenedList;
 
-public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresentation> extends DrawingTreeNodeImpl<O, GR> implements
-		ContainerNode<O, GR> {
+public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresentation> extends DrawingTreeNodeImpl<O, GR>
+		implements ContainerNode<O, GR> {
 
 	private static final Logger logger = Logger.getLogger(ContainerNodeImpl.class.getPackage().getName());
 
@@ -96,10 +96,11 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 
 	private final List<FGELayoutManager<?, O>> layoutManagers;
 
-	protected ContainerNodeImpl(DrawingImpl<?> drawing, O drawable, ContainerGRBinding<O, GR> grBinding, ContainerNodeImpl<?, ?> parentNode) {
+	protected ContainerNodeImpl(DrawingImpl<?> drawing, O drawable, ContainerGRBinding<O, GR> grBinding,
+			ContainerNodeImpl<?, ?> parentNode) {
 		super(drawing, drawable, grBinding, parentNode);
-		childNodes = new ArrayList<DrawingTreeNodeImpl<?, ?>>();
-		layoutManagers = new ArrayList<FGELayoutManager<?, O>>();
+		childNodes = new ArrayList<>();
+		layoutManagers = new ArrayList<>();
 		/*for (FGELayoutManagerSpecification<?> spec : getGraphicalRepresentation().getLayoutManagerSpecifications()) {
 			FGELayoutManager<?, O> layoutManager = (FGELayoutManager<?, O>) spec.makeLayoutManager(this);
 			layoutManagers.add(layoutManager);
@@ -117,7 +118,8 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 				// Detected that the layout manager specifications have changed
 				if (evt.getNewValue() == null) {
 					System.out.println("Les LMS changent: DELETE de " + evt.getOldValue());
-				} else if (evt.getOldValue() == null) {
+				}
+				else if (evt.getOldValue() == null) {
 					System.out.println("Les LMS changent: ADD de " + evt.getNewValue());
 				}
 				updateLayoutManagers();
@@ -131,8 +133,11 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 	 */
 	private void updateLayoutManagers() {
 		FGELayoutManager<?, O> oldDefaultLayoutManager = getDefaultLayoutManager();
-		List<FGELayoutManager<?, O>> lmToRemove = new ArrayList<FGELayoutManager<?, O>>(getLayoutManagers());
+		List<FGELayoutManager<?, O>> lmToRemove = new ArrayList<>(getLayoutManagers());
 		for (FGELayoutManagerSpecification<?> spec : getGraphicalRepresentation().getLayoutManagerSpecifications()) {
+			if (spec.isDeleted())
+				continue;
+
 			boolean found = false;
 			for (FGELayoutManager<?, ?> lm : getLayoutManagers()) {
 				if (lm.getLayoutManagerSpecification() == spec) {
@@ -146,7 +151,7 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 				layoutManagers.add(newLayoutManager);
 			}
 		}
-		for (FGELayoutManager<?, ?> lm : new ArrayList<FGELayoutManager<?, O>>(lmToRemove)) {
+		for (FGELayoutManager<?, ?> lm : new ArrayList<>(lmToRemove)) {
 			lm.delete();
 			layoutManagers.remove(lm);
 		}
@@ -226,14 +231,15 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 
 	private ShapeNode<?> getTopLevelShapeGraphicalRepresentation(ContainerNode<?, ?> container, FGEPoint p) {
 
-		List<ShapeNode<?>> enclosingShapes = new ArrayList<ShapeNode<?>>();
+		List<ShapeNode<?>> enclosingShapes = new ArrayList<>();
 
 		for (DrawingTreeNode<?, ?> dtn : container.getChildNodes()) {
 			if (dtn instanceof ShapeNode) {
 				ShapeNode<?> child = (ShapeNode<?>) dtn;
 				if (child.getShape().getShape().containsPoint(FGEUtils.convertNormalizedPoint(this, p, child))) {
 					enclosingShapes.add(child);
-				} else {
+				}
+				else {
 					// Look if we are not contained in a child shape outside current shape
 					ShapeNode<?> insideFocusedShape = getTopLevelShapeGraphicalRepresentation(child, p);
 					if (insideFocusedShape != null && insideFocusedShape instanceof ShapeGraphicalRepresentation) {
@@ -262,7 +268,8 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 
 			if (insideFocusedShape != null) {
 				return insideFocusedShape;
-			} else {
+			}
+			else {
 				return focusedShape;
 			}
 		}
@@ -273,11 +280,18 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 
 	@Override
 	public List<ShapeNodeImpl<?>> getShapeNodes() {
-		List<ShapeNodeImpl<?>> returned = new ArrayList<ShapeNodeImpl<?>>();
-		for (DrawingTreeNodeImpl<?, ?> child : getChildNodes()) {
-			if (child instanceof ShapeNodeImpl) {
-				returned.add((ShapeNodeImpl) child);
+		List<ShapeNodeImpl<?>> returned = new ArrayList<>();
+
+		List<DrawingTreeNodeImpl<?, ?>> children = getChildNodes();
+		if (children != null) {
+			for (DrawingTreeNodeImpl<?, ?> child : getChildNodes()) {
+				if (child instanceof ShapeNodeImpl) {
+					returned.add((ShapeNodeImpl) child);
+				}
 			}
+		}
+		else {
+			logger.warning("INVESTIGATE: found a container with no child");
 		}
 		return returned;
 	}
@@ -295,7 +309,8 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 		}
 		if (childNodes.contains(aChildNode)) {
 			logger.warning("Node already present");
-		} else {
+		}
+		else {
 			// System.out.println("Add child " + aChildNode + " as child as " + this);
 			((DrawingTreeNodeImpl<?, ?>) aChildNode).setParentNode(this);
 			childNodes.add((DrawingTreeNodeImpl<?, ?>) aChildNode);
@@ -310,7 +325,8 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 		}
 		if (childNodes.contains(aChildNode)) {
 			childNodes.remove(aChildNode);
-		} else {
+		}
+		else {
 			DrawingImpl.logger.warning("Cannot remove node: not present");
 		}
 		notifyNodeRemoved(aChildNode);
@@ -331,9 +347,7 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 	@Override
 	public void validate() {
 		super.validate();
-		for (FGELayoutManager<?, O> layoutManager : layoutManagers) {
-			layoutManager.doLayout(true);
-		}
+		performRelayout(false);
 	}
 
 	@Override
@@ -366,8 +380,8 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 
 	@Override
 	public void notifyNodeLayoutDecorationChanged(FGELayoutManager<?, O> layoutManager) {
-		getPropertyChangeSupport().firePropertyChange(LAYOUT_DECORATION_KEY, new Boolean(!layoutManager.paintDecoration()),
-				new Boolean(layoutManager.paintDecoration()));
+		getPropertyChangeSupport().firePropertyChange(LAYOUT_DECORATION_KEY, Boolean.valueOf(!layoutManager.paintDecoration()),
+				Boolean.valueOf(layoutManager.paintDecoration()));
 
 	}
 
@@ -391,13 +405,9 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 		if (addedNode.getGraphicalRepresentation() != null) {
 			addedNode.getGraphicalRepresentation().updateBindingModel();
 		}
-		setChanged();
 		notifyObservers(new NodeAdded(addedNode, this));
 
-		for (FGELayoutManager<?, O> lm : getLayoutManagers()) {
-			lm.invalidate();
-			lm.doLayout(true);
-		}
+		performRelayout(true);
 	}
 
 	@Override
@@ -405,14 +415,24 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 		if (removedNode.getGraphicalRepresentation() != null) {
 			removedNode.getGraphicalRepresentation().updateBindingModel();
 		}
-		setChanged();
 		notifyObservers(new NodeRemoved(removedNode, this));
 
-		for (FGELayoutManager<?, O> lm : getLayoutManagers()) {
-			lm.invalidate();
-			lm.doLayout(true);
+		if (!getDrawing().isDeleting()) {
+			performRelayout(true);
 		}
 
+	}
+
+	private void performRelayout(boolean invalidate) {
+		for (FGELayoutManager<?, O> lm : getLayoutManagers()) {
+			if (getDrawing().isUpdatingGraphicalObjectsHierarchy()) {
+				getDrawing().invokeLayoutAfterGraphicalObjectsHierarchyUpdating(lm);
+			}
+			else {
+				lm.invalidate();
+				lm.doLayout(true);
+			}
+		}
 	}
 
 	@Override
@@ -710,7 +730,6 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 	 */
 	@Override
 	public void notifyObjectResized(FGEDimension oldSize) {
-		setChanged();
 		notifyObservers(new ObjectResized(oldSize, getSize()));
 	}
 
@@ -720,7 +739,6 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 	@Override
 	public void notifyObjectWillResize() {
 		isResizing = true;
-		setChanged();
 		notifyObservers(new ObjectWillResize());
 	}
 
@@ -736,7 +754,6 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 				((ShapeNodeImpl<?>) gr).checkAndUpdateLocationIfRequired();
 			}
 		}
-		setChanged();
 		notifyObservers(new ObjectHasResized());
 	}
 
@@ -815,7 +832,8 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 
 			if (minWidth > maxWidth) {
 				logger.warning("Minimal width > maximal width, cannot proceed");
-			} else {
+			}
+			else {
 				if (newDimension.width < minWidth) {
 					newDimension.width = minWidth;
 				}
@@ -825,7 +843,8 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 			}
 			if (minHeight > maxHeight) {
 				logger.warning("Minimal height > maximal height, cannot proceed");
-			} else {
+			}
+			else {
 				if (newDimension.height < minHeight) {
 					newDimension.height = minHeight;
 				}
@@ -869,7 +888,8 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 	public Dimension getNormalizedLabelSize() {
 		if (labelMetricsProvider != null) {
 			return labelMetricsProvider.getScaledPreferredDimension(1.0);
-		} else {
+		}
+		else {
 			return new Dimension(0, 0);
 		}
 	}
@@ -885,14 +905,13 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 	public FGERectangle getRequiredBoundsForContents() {
 		FGERectangle requiredBounds = null;
 		if (getChildNodes() == null) {
-			return new FGERectangle(getGraphicalRepresentation().getMinimalWidth() / 2,
-					getGraphicalRepresentation().getMinimalHeight() / 2, getGraphicalRepresentation().getMinimalWidth(),
-					getGraphicalRepresentation().getMinimalHeight());
+			return new FGERectangle(getGraphicalRepresentation().getMinimalWidth() / 2, getGraphicalRepresentation().getMinimalHeight() / 2,
+					getGraphicalRepresentation().getMinimalWidth(), getGraphicalRepresentation().getMinimalHeight());
 		}
 		for (DrawingTreeNode<?, ?> gr : getChildNodes()) {
 			if (gr instanceof ShapeNode) {
 				ShapeNodeImpl<?> shapeGR = (ShapeNodeImpl<?>) gr;
-				FGERectangle bounds = shapeGR.getBoundsNoBorder();
+				FGERectangle bounds = shapeGR.getBounds();
 				if (shapeGR.hasText()) {
 					Rectangle labelBounds = shapeGR.getNormalizedLabelBounds(); // getLabelBounds((new JLabel()), 1.0);
 					FGERectangle labelBounds2 = new FGERectangle(labelBounds.x, labelBounds.y, labelBounds.width, labelBounds.height);
@@ -901,16 +920,18 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 
 				if (requiredBounds == null) {
 					requiredBounds = bounds;
-				} else {
+				}
+				else {
 					requiredBounds = requiredBounds.rectangleUnion(bounds);
 				}
 			}
 		}
 		if (requiredBounds == null) {
-			requiredBounds = new FGERectangle(getGraphicalRepresentation().getMinimalWidth() / 2, getGraphicalRepresentation()
-					.getMinimalHeight() / 2, getGraphicalRepresentation().getMinimalWidth(), getGraphicalRepresentation()
-					.getMinimalHeight());
-		} else {
+			requiredBounds = new FGERectangle(getGraphicalRepresentation().getMinimalWidth() / 2,
+					getGraphicalRepresentation().getMinimalHeight() / 2, getGraphicalRepresentation().getMinimalWidth(),
+					getGraphicalRepresentation().getMinimalHeight());
+		}
+		else {
 			if (requiredBounds.width < getGraphicalRepresentation().getMinimalWidth()) {
 				requiredBounds.x = requiredBounds.x - (int) ((getGraphicalRepresentation().getMinimalWidth() - requiredBounds.width) / 2.0);
 				requiredBounds.width = getGraphicalRepresentation().getMinimalWidth();
@@ -970,33 +991,44 @@ public abstract class ContainerNodeImpl<O, GR extends ContainerGraphicalRepresen
 				for (FGELayoutManager<?, O> layoutManager : getLayoutManagers()) {
 					if (layoutManagerAreas == null) {
 						layoutManagerAreas = layoutManager.getControlAreas();
-					} else if (layoutManagerAreas instanceof ConcatenedList) {
+					}
+					else if (layoutManagerAreas instanceof ConcatenedList) {
 						((ConcatenedList<ControlArea<?>>) layoutManagerAreas).addElementList(layoutManager.getControlAreas());
-					} else {
-						controlAreas = new ConcatenedList<ControlArea<?>>(controlAreas, layoutManager.getControlAreas());
+					}
+					else {
+						controlAreas = new ConcatenedList<>(controlAreas, layoutManager.getControlAreas());
 					}
 				}
 			}
 			if (customControlAreas != null && customControlAreas.size() > 0) {
 				if (controlAreas == null) {
 					controlAreas = customControlAreas;
-				} else if (controlAreas instanceof ConcatenedList) {
+				}
+				else if (controlAreas instanceof ConcatenedList) {
 					((ConcatenedList<ControlArea<?>>) controlAreas).addElementList(customControlAreas);
-				} else {
-					controlAreas = new ConcatenedList<ControlArea<?>>(controlAreas, customControlAreas);
+				}
+				else {
+					controlAreas = new ConcatenedList<>(controlAreas, customControlAreas);
 				}
 			}
 			if (layoutManagerAreas != null && layoutManagerAreas.size() > 0) {
 				if (controlAreas == null) {
 					controlAreas = layoutManagerAreas;
-				} else if (controlAreas instanceof ConcatenedList) {
+				}
+				else if (controlAreas instanceof ConcatenedList) {
 					((ConcatenedList<ControlArea<?>>) controlAreas).addElementList(layoutManagerAreas);
-				} else {
-					controlAreas = new ConcatenedList<ControlArea<?>>(controlAreas, layoutManagerAreas);
+				}
+				else {
+					controlAreas = new ConcatenedList<>(controlAreas, layoutManagerAreas);
 				}
 			}
 		}
 		return controlAreas;
+	}
+
+	@Override
+	public void clearControlAreas() {
+		controlAreas = null;
 	}
 
 }
